style.css
/* ... */
p > a {
	font-weight: 400;
}

dfn,
cite,
em,
i {
	font-style: italic;
}

blockquote {
	margin: 0 1.5em;
}

address {
	margin: 0 0 1.5em;
}

pre {
	background: #eee;
	font-family: "Courier 10 Pitch", Courier, monospace;
	font-size: 15px;
	font-size: 0.9375rem;
	line-height: 1.6;
	margin-bottom: 1.6em;
	max-width: 100%;
	overflow: auto;
	padding: 1.6em;
}

code,
kbd,
tt,
var {
	font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
	font-size: 15px;
	font-size: 0.9375rem;
}

abbr,
acronym {
	border-bottom: 1px dotted #666;
	cursor: help;
}

mark,
ins {
	background: #fff9c0;
	text-decoration: none;
}

big {
	font-size: 125%;
}

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
html {
	box-sizing: border-box;
}

*,
*:before,
*:after { /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
	box-sizing: inherit;
}

body {
	background: #fff; /* Fallback for when there is no custom background color defined. */
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: "";
}

blockquote,
q {
	quotes: "" "";
}

hr {
	background-color: #ccc;
	border: 0;
	height: 1px;
	margin-bottom: 1.5em;
}

ul,
ol {
	margin: 0 0 1.5em 3em;
}

ul {
	list-style: disc;
}

ol {
	list-style: decimal;
}

li > ul,
li > ol {
	margin-bottom: 0;
	margin-left: 1.5em;
}

dt {
	font-weight: bold;
}

dd {
	margin: 0 1.5em 1.5em;
}

img {
	height: auto; /* Make sure images are scaled correctly. */
	max-width: 100vw; /* Adhere to container width. */
}

table {
	margin: 0 0 1.5em;
	width: 100%;
}

/*--------------------------------------------------------------
# Forms
--------------------------------------------------------------*/
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
	border: 1px solid;
	border-color: #ccc #ccc #bbb;
	border-radius: 3px;
	background: #e6e6e6;
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
	color: rgba(0, 0, 0, .8);
	font-size: 12px;
	font-size: 0.75rem;
	line-height: 1;
	padding: .6em 1em .4em;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
}

button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover {
	border-color: #ccc #bbb #aaa;
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
}

button:focus,
input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus,
button:active,
input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {
	border-color: #aaa #bbb #bbb;
	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"],
textarea {
	color: #666;
	border: 1px solid #ccc;
	border-radius: 3px;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
input[type="search"]:focus,
textarea:focus {
	color: #111;
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"] {
	padding: 3px;
}

textarea {
	padding-left: 3px;
	width: 100%;
}

#post-18 form{
	width: 80vw;
	margin: auto;
}
#main .contact-form input[type=email],
#main .contact-form input[type=text],
#main .contact-form textarea {
	width: 80vw;
	border-radius: 0;
	margin-bottom: 15px;
	min-width: 300px;
	max-width: 100%;
}
#main .contact-form label span{
	font-weight: 300;
}

/*--------------------------------------------------------------
# Navigation
--------------------------------------------------------------*/
/*--------------------------------------------------------------
## Links
--------------------------------------------------------------*/
a {
	color: #001242;
}

a:visited {
	color: #001242;
}

a:hover,
a:focus,
a:active {
	color: #CA3C66;
}

a:focus {
	outline: thin dotted;
}

a:hover,
a:active {
	outline: 0;
}

/*--------------------------------------------------------------
## Menus
--------------------------------------------------------------*/
/* #masthead > nav/.main-navigation */

#masthead nav{
	z-index:1000;
}

.main-navigation {
	clear: both;
	display: block;
	width: 100%;
    height: 40px;
	background-color: rgba(0, 18, 66, 0.9);
	position: fixed;
	top: 0;
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

.nav-menu{
	background-color: rgba(0, 18, 66, 0.9);
}

.main-navigation ul {
	display: none;
	list-style: none;
	margin: 0;
	padding-left: 0;
	width: 100%;
	text-transform: uppercase;
}

.main-navigation .nav-menu > li {
	position: relative;
	text-align: center;
	flex: 1;
	height: 35px;
	font-size: 22px;
}

.main-navigation a {
	display: block;
	text-decoration: none;
	color: #fff;
}

.page_item .children {
	display: none;
}

.current_page_parent .children {
	display: flex;
	width: 100vw;
	position: fixed;
	left: 0;
}

.main-navigation ul ul {
	background-color: #fff;
	border-bottom: 1px solid white;
}

.main-navigation ul ul ul {
	left: -999em;
	top: 0;
}

.main-navigation ul ul a {
	font-size: 19px;
}

.main-navigation ul ul li {
	flex: 1;
	background-color: rgba(0, 18, 66, 0.6);
}

.main-navigation ul ul li:hover,
.main-navigation ul ul .current_page_item {
	background-color: rgba(0, 18, 66, 0.2);
}

.main-navigation ul ul li:hover a {
}

.main-navigation li:hover,
.main-navigation li.focus,
.current_page_item,
.current_page_parent {
	background-color: #fff;
}

.main-navigation li:hover > a,
.main-navigation li.focus > a,
.current_page_item > a,
.current_page_parent > a {
	color: rgba(0, 18, 66, 0.9);
}

.main-navigation ul ul :hover > a,
.main-navigation ul ul .focus > a {
}
/* ... */

